# winerank-agent

./: .dockerignore  .env.example  .gitignore  CHANGES.md  DEPLOYMENT.md  Dockerfile  IMPLEMENTATION-SUMMARY.md  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
.cursor/plans/: batch_mode_executor_refactoring_f7180d04.plan.md  judge_correction_loop_dd96f3e2.plan.md  sft_training_data_pipeline_bd3c0e42.plan.md
alembic/: env.py
alembic/versions/: 1cff6e8d6528_initial_schema.py  399b50454181_add_crawl_metrics_to_restaurant.py  a1b2c3d4e5f6_add_download_list_failed_status.py  b3e1f9a72c04_add_address_zip_code_to_restaurant.py
docs/: BINWISE_FALLBACK.md  MICHELIN_PAGING_FIX.md
prompts/: MASTER-DESIGN.md  PLAN-PROMPT.md
scripts/: README.md  setup-dev.sh  stamp-alembic.py
src/winerank/: __init__.py  cli.py  config.py
src/winerank/common/: db.py  (+2 more)
tests/: __init__.py  conftest.py  test_binwise_search.py  test_downloader.py  test_init_job.py  test_michelin.py  test_models.py  test_register_wine_list.py  test_restaurant_finder.py  test_sft_cli.py  test_sft_config.py  test_sft_corrector.py  test_sft_dataset_builder.py  test_sft_executor_batch.py  test_sft_executor_sync.py  test_sft_executor_types.py  test_sft_judge_reviewer.py  test_sft_manifest.py  test_sft_page_reader.py  test_sft_page_sampler.py  test_sft_prepare_process.py  test_sft_progress.py  test_sft_prompts.py  test_sft_schemas.py  test_sft_taxonomy_extractor.py  test_sft_wine_parser.py  test_site_and_seed.py  test_text_extractor.py  test_workflow_circuit_breaker.py  test_workflow_routing.py
(+41 files in other folders)
