[project]
name = "winerank-agent"
version = "0.1.0"
description = "AI agent for wine ranking and recommendations"
readme = "README.md"
requires-python = ">=3.12.10"
dependencies = [
    # Core
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "typer>=0.12",
    "rich>=13.0",
    # DB Manager
    "streamlit>=1.38",
    "pandas>=2.0",
    # Crawler
    "langgraph>=0.2",
    "langgraph-checkpoint-postgres>=2.0",
    "playwright>=1.40",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "pdfplumber>=0.11",
    "lxml>=5.0",
    # LLM (optional, for future crawler navigation)
    "litellm>=1.40",
    # BinWise fallback search
    "googlesearch-python>=1.3",
    # Testing
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.optional-dependencies]
dev = [
    "pyright>=1.1",
    "types-beautifulsoup4>=4.12",
]

[project.scripts]
winerank = "winerank.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/winerank"]

[tool.pytest.ini_options]
markers = [
    "integration: tests that hit live websites and/or LLM APIs (deselected by default)",
]
addopts = "-m 'not integration'"

[dependency-groups]
dev = [
    "types-beautifulsoup4>=4.12",
]
